- Fixed overflow issues since refactor

--- a/components/Blog/List.module.scss
+++ b/components/Blog/List.module.scss
@@ -93,13 +93,13 @@
     flex-wrap: nowrap;
     width: 100%;
     height: 100%;
-    padding: .25em;
   }
 
   .postList > article:nth-child( n ) {
     flex-basis: auto;
     width: 100%;
     height: 10em;
+    margin: 0 auto;
   }
 
   .postList > article:nth-child( n ):hover {
