--- a/components/Home/Recents/Posts/RecentPosts.module.scss
+++ b/components/Home/Recents/Posts/RecentPosts.module.scss
@@ -9,6 +9,7 @@
   height: 20em;
   margin-top: auto;
   margin-bottom: 1em;
+  padding: 0 1em;
 }
 
 .recentArticles h2 {
@@ -25,7 +26,7 @@
   flex: 1 2 auto;
   width: 30%;
   height: 100%;
-  margin: auto .5em;
+  margin: auto .25em;
   transition: all 350ms ease-in-out;
   transition-property: height, width;
 }
@@ -40,12 +41,13 @@
   .recentArticles {
     flex-direction: column;
     height: 45em;
+    padding: .5em;
   }
 
   .recentArticles > article {
     width: 100%;
     height: 30%;
-    margin-bottom: .75em;
+    margin: 0 auto;
   }
 
   .recentArticles article:hover {
